# cosudo

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  LICENSE  README.md  boot_django.py  db.sqlite3  manage.py  requirements.txt
django-dynamic-map-borinud/: MANIFEST.in  README.rst  django-dynamic-map-borinud.spec  load_tests.py  setup.cfg
django-dynamic-map-borinud/dynamic/: choices.py  compare_summaries.py  models.py  permissions.py  proxy.py  serializers.py  settings.py  tests.py  urls.py  views.py
django-dynamic-map-borinud/dynamic/fixtures/: stations.json  variables.json
django-dynamic-map-borinud/dynamic/migrations/: 0001_initial.py  0002_dataedits_stationedits.py  0003_auto_20201113_1551.py  0004_auto_20201113_1552.py  0005_auto_20201115_1646.py  0006_auto_20201115_1656.py  0007_edit_data_type.py  0008_auto_20201115_1937.py
django-dynamic-map-borinud/dynamic/static/dynamic/css/: main.css
django-dynamic-map-borinud/dynamic/static/dynamic/fixtures/: stations.json
django-dynamic-map-borinud/dynamic/static/dynamic/js/: DynamicFormPopulation.js  borinud.B.js  utils.js
django-dynamic-map-borinud/dynamic/static/dynamic/js/structure/: alarm-collection.js  alarm-view.js  app.js  data-collection.js  edit-data-collection.js  edit-data-history-collection.js  edit-data-history-view.js  edit-data-view.js  edit-station-collection.js  edit-station-history-collection.js  edit-station-history-view.js  edit-station-view.js  edit-tab-view.js  (+5 more)
django-dynamic-map-borinud/dynamic/templates/: base_map.html  extract_page.html  map.html  map2.html  map_validation.html
(+37 files in other folders)
