[metadata]
name = django-dynamic-map-borinud
version = 1.4
description = This app shows borinud data on a dynamic map
long_description = file:README.rst
url = https://github.com/ARPA-SIMC/cosudo
license = "GNU GPL"


[options]
include_package_data = true
python_requires = >=3.6
setup_requires = setuptools >= 38.3.0
install_requires = 
	Django>=2.2
	djangorestframework
packages = find: